Source/ISS/Development/PawsSupport/Devices/Bus_1553/Atlas/Remote PC test software/Include/BTIEBR.H

typedef void VOID;
typedef int INT32;
typedef int * LPINT32;
typedef unsigned short UINT16;
typedef unsigned short * LPUINT16;
typedef unsigned int UINT32;
typedef unsigned long MSGADDR;
typedef unsigned long LISTADDR;
typedef unsigned long * LPMSGADDR;
typedef int BOOL;
typedef void * HCORE;
typedef int HCORE;
typedef int ERRVAL;
typedef int SCHNDX;
typedef struct
{
    UINT32 ctrlflags;           //User writes message configuration options
    UINT16 flag1;               //Card writes message flag 1
    UINT16 flag2;               //Card writes message flag 2
    UINT16 errflags;            //Card writes error flags
    UINT16 actflags;            //Card writes activity flags
    UINT16 resptime;            //Card writes response time
    UINT16 resv7;               //Reserved field
    UINT16 datacount;           //Card writes data count
    UINT16 extflag;             //Driver writes external flags
    UINT32 timetag;             //Card writes time tag
    UINT32 elapsetime;          //Card writes elapsed time
    UINT32 preaddr;             //Driver writes pre-proc address
    UINT32 postaddr;            //Driver writes post-proc address
    UINT32 timetagh;            //Card writes extended timetag
    UINT16 resv18;              //Reserved field
    UINT16 resv19;              //Reserved field
    UINT16 cwd;                 //User writes command word
	UINT16 cwdinfo;				//User writes command word info
	UINT16 swd;                 //Card writes status word
	UINT16 swdinfo;				//Card writes status word info
    UINT16 data[32];            //User writes data words
    UINT16 extra[8];            //User writes extra words
} XMITFIELDSEBR;
typedef XMITFIELDSEBR * LPXMITFIELDSEBR;
/**
*
*  BTIEBR Driver functions.
*
**/

BTIEBRAPI ERRVAL __stdcall BTIEBR_BCConfig(UINT32 configval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCConfigEx(UINT32 configval,UINT16 count,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_BCConfigMsg(UINT32 configval,MSGADDR msgaddr,HCORE handleval);
BTIEBRAPI LISTADDR __stdcall BTIEBR_BCCreateList(UINT32 listconfigval,INT32 count,UINT32 msgconfigval,UINT16 cwd,LPUINT16 data,INT32 rtlink,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_BCCreateMsg(UINT32 configval,UINT16 cwd,LPUINT16 data,INT32 rtlink,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_BCPause(INT32 channum,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_BCPauseCheck(INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_BCResume(INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedAgain(SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedBranch(UINT32 condition,SCHNDX destindex,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCSchedBranchUpdate(SCHNDX destindex,SCHNDX opcodeindex,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCSchedBuild(UINT16 nummsgs,LPMSGADDR msgaddr,LPUINT16 freq,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedCall(UINT32 condition,SCHNDX destindex,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCSchedCallUpdate(SCHNDX destindex,SCHNDX opcodeindex,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedEntry(INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedFrame(UINT32 timeval,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedFrameEnd(INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedFrameStart(UINT32 timeval,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedGap(UINT16 gapval,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedHalt(INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedLog(UINT32 condition,UINT16 tagval,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedMsg(MSGADDR msgaddr,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedPause(INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedPulse(INT32 dionum,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedPulse0(INT32 dionum,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedPulse1(INT32 dionum,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedRestart(INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedRetry(UINT32 condition,UINT16 retries,INT32 channum,HCORE handleval);
BTIEBRAPI SCHNDX __stdcall BTIEBR_BCSchedReturn(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCSetDefaultGap(INT32 gapval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCSetTimeout(UINT16 timeoutval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCSyncDefine(BOOL enableflag,UINT16 syncmask,UINT16 pinpolarity,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCTransmitMsg(LPXMITFIELDSEBR xmitfields,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_BCTriggerDefine(BOOL enableflag,UINT16 trigmask,UINT16 trigval,UINT16 pinpolarity,INT32 channum,HCORE handleval);
BTIEBRAPI UINT32 __stdcall BTIEBR_ChGetInfo(UINT16 infotype,INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ChIsBM(INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ChIsEBR(INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ChIsM(INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ChIsS(INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ChStart(INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ChStop(INT32 channum,HCORE handleval);
BTIEBRAPI UINT16 __stdcall BTIEBR_CmdMaxLoopRd(INT32 channum,HCORE handleval);
BTIEBRAPI VOID __stdcall BTIEBR_CmdMaxLoopWr(UINT16 countval,INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_CmdShotRd(SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_CmdShotWr(BOOL value,SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_CmdSkipRd(SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_CmdSkipWr(BOOL value,SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_CmdStepRd(SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_CmdStepWr(BOOL value,SCHNDX index,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorCtrl(UINT32 ctrlval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorDefine(UINT32 defineval,UINT16 errvalue,INT32 countval,UINT16 wordpos,UINT16 bitpos,INT32 channum,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ErrorSent(INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorTagBC(BOOL tagval,MSGADDR msgaddr,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorTagRT(BOOL tagval,BOOL mcflag,INT32 rtlink,BOOL trflag,INT32 saval,INT32 channum,HCORE handleval);
BTIEBRAPI ERRVAL __stdcall BTIEBR_ErrorTriggerDefine(BOOL enableflag,UINT16 trigmask,UINT16 trigval,UINT16 pinpolarity,INT32 channum,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_ListBlockRd(LPUINT16 buf,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI MSGADDR __stdcall BTIEBR_ListBlockWr(LPUINT16 buf,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_ListDataRd(LPUINT16 buf,INT32 count,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI INT32 __stdcall BTIEBR_ListDataWr(LPUINT16 buf,INT32 count,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ListMultiBlockRd(LPUINT16 buf,LPINT32 blkcountptr,LISTADDR listaddr,HCORE handleval);
BTIEBRAPI BOOL __stdcall BTIEBR_ListMultiBlockWr(LPUINT16 buf,INT32 blkcount,LISTADDR listaddr,HCORE handleval);